--- a/modules/parts-inventory/parts-inventory-service/build.gradle
+++ b/modules/parts-inventory/parts-inventory-service/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib"
+
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.aop.api"
