Refactor Manufacturer to portlet module & admin panel app

--- a/modules/parts-inventory/parts-inventory-web/src/main/resources/content/Language.properties
+++ b/modules/parts-inventory/parts-inventory-web/src/main/resources/content/Language.properties
@@ -43,8 +43,16 @@ partname-required=Part Name is Required
 partnumber-required=Part Number is Required
 permission-error=You do not have permission to perform that operation
 
-javax.portlet.description.com_liferay_training_web_PartsPortlet=Parts 
+javax.portlet.description.com_liferay_training_web_PartsPortlet=Parts
 javax.portlet.display-name.com_liferay_training_web_PartsPortlet=Parts
 javax.portlet.keywords.com_liferay_training_web_PartsPortlet=Parts
 javax.portlet.short-title.com_liferay_training_web_PartsPortlet=Parts
 javax.portlet.title.com_liferay_training_web_PartsPortlet=Parts
+
+javax.portlet.description.com_liferay_training_web_ManufacturerPortlet=Manufacturer
+javax.portlet.display-name.com_liferay_training_web_ManufacturerPortlet=Manufacturer
+javax.portlet.keywords.com_liferay_training_web_ManufacturerPortlet=Manufacturer
+javax.portlet.short-title.com_liferay_training_web_ManufacturerPortlet=Manufacturer
+javax.portlet.title.com_liferay_training_web_ManufacturerPortlet=Manufacturer
+
+category.inventory.label=Inventory
