--- a/modules/parts-inventory/parts-inventory-web/build.gradle
+++ b/modules/parts-inventory/parts-inventory-web/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compileOnly project(":modules:parts-inventory:parts-inventory-api")
 
+	compileOnly group: "com.liferay", name: "com.liferay.application.list.api"
 	compileOnly group: "com.liferay", name: "com.liferay.portlet.display.template.api"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.java"
 
